# googletest-cmake-starter

./: .gitignore  README.md
src/: CMakeLists.txt  foo.cpp
test/: CMakeLists.txt  foo.cpp  main.cpp
